# Paris-Agent

./: .gitignore  AGENTS.md  README.md  skills-lock.json
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260613_0001_create_agent_runs.py  20260614_0002_create_runtime_events.py  20260614_0003_create_skill_registry.py  20260614_0004_create_agent_memories.py
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  events.py  mock_runner.py
backend/app/agent/runtime/: __init__.py
backend/app/api/: routes_agent.py  routes_health.py  routes_memories.py  routes_skills.py
backend/app/core/: config.py
backend/app/db/: __init__.py  session.py
backend/app/eval/: __init__.py
backend/app/memory/: __init__.py  deduplicator.py  extractor.py  manager.py  retriever.py
backend/app/observability/: __init__.py
backend/app/queue/: __init__.py
backend/app/schemas/: agent.py  memory.py  skill.py
backend/app/security/: __init__.py
backend/app/skills/: __init__.py  loader.py  registry.py  selection.py  synchronizer.py  validator.py
backend/app/tools/: __init__.py
backend/tests/: conftest.py  test_agent_runs_api.py  test_health.py  test_memory_api.py  test_memory_deduplicator.py  test_memory_extractor.py  test_memory_manager.py  test_memory_model.py  test_memory_repository.py  test_memory_retriever.py  test_memory_schemas.py  test_mock_runner_memory.py  test_runtime_events.py  test_skill_definitions.py  test_skill_memory_policy.py  test_skill_registry.py  test_skills_api.py
(+62 files in other folders)
