[project]
name = "agi-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for the AGI Assistant Skill-based Agent Workbench."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
